@@ -1,7 +1,7 @@
 #!/bin/sh
 
 # Get version number
-if sh ./version.sh; then
+if ./version.sh; then
     # Run this to generate all the initial makefiles, etc.
     autoreconf -fv --install && echo "You can now run \"./configure\" and then \"make\"."
 else
